[package]
name = "rscalc"
version = "3.1.0"
edition = "2018"
authors = ["Luke I. Wilson <thelukaswils@gmail.com>", "Skycloudd"]
description = "A fast calculator for solving scientific and algebraic math equations in strings."
repository = "https://github.com/Skycloudd/rscalc"
readme = "README.md"
keywords = ["scientific", "calculator", "parser", "expression"]
categories = ["command-line-utilities", "parsing", "science"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rscalc"
path = "src/bin/main.rs"
required-features = ["executable"]

[features]
executable = ["rustyline", "structopt", "colored"]

[dependencies]
peekmore = "1.0.0"
#num = "0.4.0"
# dependencies for the runnable version (feature "executable")
rustyline = { version= "9.1.2", optional = true }
structopt = { version = "0.3", optional = true }
colored = { version = "2.0", optional = true }
