[package]
name = "rscalc"
version = "4.0.0"
edition = "2021"
authors = ["Luke I. Wilson <thelukaswils@gmail.com>", "skycloudd"]
description = "A fast calculator for solving scientific and algebraic math equations in strings."
repository = "https://github.com/skycloudd/rscalc"
readme = "README.md"
keywords = ["scientific", "calculator", "parser", "expression"]
categories = ["command-line-utilities", "parsing", "science"]
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rscalc"
path = "src/bin/main.rs"
required-features = ["executable"]

[features]
executable = ["rustyline", "structopt", "colored"]

[dependencies]
peekmore = "1.3.0"
rustyline = { version = "14.0.0", optional = true }
structopt = { version = "0.3.26", optional = true }
colored = { version = "2.1.0", optional = true }
